@@ -3376,7 +3376,9 @@ See the examples below for other currently supported options.
   # "traphotkeys" - system hotkeys not handled by host OS, but sent to guest
   #                 (win32 in mouse capture and fullscreen mode: alt-tab, win,
   #                 alt-space, alt-esc, ctrl-esc)
-  display_library: win32, options="traphotkeys"
+  # "autoscale"   - scale small simulation window by 2, 4 or 8 depending on
+  #                 desktop window size (window mode only)
+  display_library: win32, options="traphotkeys autoscale"
 </screen>
 </para>
 
